# Mail-cs50-project3

./: README.md  db.sqlite3  pyproject.toml
mail/migrations/: 0001_initial.py
mail/static/mail/: inbox.js  styles.css
mail/templates/mail/: inbox.html
