[tool.poetry]
name = "mail-cs50-project3"
version = "0.1.0"
description = ""
authors = ["MicolGiannelli19 <micol.giannelli@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
